--- a/templates/Front/Content/Customer/edit.html.twig
+++ b/templates/Front/Content/Customer/edit.html.twig
@@ -16,14 +16,14 @@
         {{ form_start(form) }}
             {{ form_errors(form) }}
 
-            <div id="{{ form.userData.vars.id }}">
+            <div id="{{ form.customerUserData.vars.id }}">
                 <div class="wrap-box">
                     <h2 class="wrap-box__title">{{ 'Personal data'|trans }}</h2>
                     <div class="wrap-box__in">
-                        {{ form_row(form.userData.firstName, { label: 'First name'|trans}) }}
-                        {{ form_row(form.userData.lastName, { label: 'Last name'|trans}) }}
-                        {{ form_row(form.userData.telephone, { label: 'Telephone'|trans}) }}
-                        {{ form_row(form.userData.email, { label: 'E-mail'|trans}) }}
+                        {{ form_row(form.customerUserData.firstName, { label: 'First name'|trans}) }}
+                        {{ form_row(form.customerUserData.lastName, { label: 'Last name'|trans}) }}
+                        {{ form_row(form.customerUserData.telephone, { label: 'Telephone'|trans}) }}
+                        {{ form_row(form.customerUserData.email, { label: 'E-mail'|trans}) }}
                         <p>
                             {{ 'To prevent the possibility of account theft, the change of the e-mail address must be dealt with individually. If your e-mail address has changed, please contact us.'|trans }}
                         </p>
@@ -36,18 +36,18 @@
                         {% if customer.memberOfLoyaltyProgram %}
                             {{ 'Jste členem Věrnostního programu'|trans }}
                         {% else %}
-                            {{ form_row(form.userData.memberOfLoyaltyProgram, { label: 'Chci se stát členem Věrnostního programu'|trans}) }}
+                            {{ form_row(form.customerUserData.memberOfLoyaltyProgram, { label: 'Chci se stát členem Věrnostního programu'|trans}) }}
                         {% endif %}
                     </div>
                 </div>
 
                 <div class="wrap-box">
                     <h2 class="wrap-box__title">{{ 'Changing password'|trans }}</h2>
-                    <div class="wrap-box__in" id="{{ form.userData.password.vars.id }}">
+                    <div class="wrap-box__in" id="{{ form.customerUserData.password.vars.id }}">
                         <div class="form-line">
                             <div class="form-line__input">
                                 <label class="input__label">{{ 'Heslo'|trans }}</label>
-                                {{ form_widget(form.userData.password.first, { label: 'Password'|trans}) }}
+                                {{ form_widget(form.customerUserData.password.first, { label: 'Password'|trans}) }}
                                 <i class="svg svg-info in-icon in-icon--info form-line__info js-tooltip"
                                     data-toggle="tooltip"
                                     data-placement="right"
@@ -56,10 +56,10 @@
                                 </i>
                             </div>
                             <div class="form-line__error">
-                                {{ form_errors(form.userData.password.first, { label: 'Password'|trans}) }}
+                                {{ form_errors(form.customerUserData.password.first, { label: 'Password'|trans}) }}
                             </div>
                         </div>
-                        {{ form_row(form.userData.password.second, { label: 'Password again'|trans}) }}
+                        {{ form_row(form.customerUserData.password.second, { label: 'Password again'|trans}) }}
                     </div>
                 </div>
             </div>
