set loaderElement of searchAutocomplete component to search button
- see https://github.com/shopsys/shopsys/pull/1626

--- a/templates/Front/Content/Search/searchBox.html.twig
+++ b/templates/Front/Content/Search/searchBox.html.twig
@@ -13,7 +13,7 @@
                     data-autocomplete-url="{{ url('front_search_autocomplete') }}"
                 />
             </div>
-            <div class="search__form__submit">
+            <div class="search__form__submit js-search-autocomplete-submit">
                 <button class="search__form__submit__button btn-no-style" type="submit">
                     <i class="svg svg-search"></i>
                 </button>
