--- a/src/Resources/styles/front/common/components/box/order-done.less
+++ b/src/Resources/styles/front/common/components/box/order-done.less
@@ -70,7 +70,7 @@
                 width: 100%;
 
                 @media @query-lg {
-                    margin-bottom: 0px;
+                    margin-bottom: 0;
                     width: calc(~"100% - 210px");
                 }
 
