--- a/src/Resources/styles/front/common/components/box/popup-add.less
+++ b/src/Resources/styles/front/common/components/box/popup-add.less
@@ -95,7 +95,7 @@
                     display: block;
                     line-height: @box-popup-add-product-name-line-height;
                     max-height: @box-popup-add-product-name-lines*@box-popup-add-product-name-line-height;
-                    margin-bottom: @box-popup-add-product-name-line-gap;;
+                    margin-bottom: @box-popup-add-product-name-line-gap;
                     overflow: hidden;
 
                     color: @color-base;
@@ -196,7 +196,6 @@
                     transform: rotate(90deg);
                 }
             }
-
         }
 
         &__transport {
