--- a/src/Resources/styles/front/common/components/in/badge.less
+++ b/src/Resources/styles/front/common/components/in/badge.less
@@ -3,7 +3,7 @@
 
 .in-badge {
     display: inline;
-    padding: 0px 2px;
+    padding: 0 2px;
     line-height: 18px;
 
     color: @in-badge-outline-color;
