--- a/src/Resources/styles/admin/todo.less
+++ b/src/Resources/styles/admin/todo.less
@@ -19,9 +19,9 @@
 }
 
 .js-grid-column-smsAlertType {
-    .form-line__side { margin-left: 0px; }
+    .form-line__side { margin-left: 0; }
 }
 
 .box-mass-action__filter__line .box-mass-action__filter__line__item:last-child .form-line__side {
-    margin-left: 0px;
+    margin-left: 0;
 }
