--- a/src/Resources/styles/front/common/components/box/login.less
+++ b/src/Resources/styles/front/common/components/box/login.less
@@ -1,5 +1,5 @@
 @box-login-button-height: 50px;
-@box-login-width: 380px;
+@box-login-width: 400px;
 @box-login-padding: 40px;
 @box-login-padding-mobile: 20px;
 
@@ -12,7 +12,7 @@
     width: 100%;
     padding: @box-login-padding-mobile;
 
-    background-color: @color-box;
+    background: @color-gray;
 
     @media @query-md {
         padding: @box-login-padding;
@@ -29,7 +29,6 @@
 
     &__item {
         position: relative;
-        margin-bottom: 10px;
 
         &--move-top {
             margin-top: -@input-border-size;
@@ -63,6 +62,16 @@
         @media @query-lg {
             flex-direction: row;
             text-align: left;
+        }
+
+        &__login {
+            height: @box-login-button-height;
+            padding: calc(~"(@{box-login-button-height}-@{font-size})/2") 25px;
+
+            background-color: @color-orange;
+            color: @color-f;
+            font-size: @font-size;
+            text-transform: uppercase;
         }
 
         &__lost {
@@ -107,6 +116,124 @@
             font-weight: bold;
             text-decoration: none;
             text-transform: uppercase;
+        }
+    }
+
+    &__or {
+        position: relative;
+        height: 41px;
+        line-height: 41px;
+        text-align: center;
+
+        &__text {
+            position: relative;
+            display: inline;
+            padding: 0 8px;
+            z-index: 1;
+
+            color: @color-base;
+            background: @color-f;
+        }
+
+        &:before {
+            position: absolute;
+            content: '';
+            height: 1px;
+            width: 100%;
+            top: 50%;
+            left: 0;
+            z-index: 0;
+
+            background: @color-gray;
+        }
+    }
+
+    &__facebook {
+        display: flex;
+        flex-direction: row;
+        width: 100%;
+        height: @box-login-button-height;
+        line-height: 20px;
+
+        background-color: @box-login-facebook-bg;
+        border: 1px solid @box-login-facebook-bg;
+
+        @media @query-md {
+            line-height: @box-login-button-height;
+        }
+
+        &__text {
+            width: calc(~"@{calc-base} -  @{box-login-button-icon-size}");
+            text-align: center;
+            line-height: @box-login-button-height;
+
+            color: @color-f;
+            font-size: @font-size-small;
+            font-weight: bold;
+
+            @media @query-md {
+                padding-top: 0;
+
+                font-size: @font-size;
+                text-transform: uppercase;
+            }
+        }
+
+        &__icon {
+            width: @box-login-button-icon-size;
+            line-height: @box-login-button-height;
+            text-align: center;
+
+            background: #314783;
+
+            .svg {
+                font-size: 20px;
+                color: @color-f;
+            }
+        }
+    }
+
+    &__google {
+        display: flex;
+        flex-direction: row;
+        height: @box-login-button-height;
+        line-height: 20px;
+
+        background-color: @box-login-google-bg;
+        border: 1px solid @box-login-google-bg;
+
+        @media @query-md {
+            line-height: @box-login-button-height;
+        }
+
+        &__text {
+            width: calc(~"@{calc-base} -  @{box-login-button-icon-size}");
+            text-align: center;
+            line-height: @box-login-button-height;
+
+            color: @color-f;
+            font-size: @font-size-small;
+            font-weight: bold;
+
+            @media @query-md {
+                padding: 0;
+
+                font-size: @font-size;
+            }
+        }
+
+        &__icon {
+            width: @box-login-button-icon-size;
+            line-height: @box-login-button-height;
+            text-align: center;
+            padding-top: 4px;
+
+            background: @color-f;
+
+            .svg {
+                font-size: 20px;
+                color: @color-base;
+            }
         }
     }
 }
