--- a/src/Resources/styles/front/common/components/box/preview.less
+++ b/src/Resources/styles/front/common/components/box/preview.less
@@ -1,10 +1,8 @@
 @box-preview-bg: @color-f;
 @box-preview-width: @box-order-cart-width;
 @box-preview-gap: 90px;
-@box-preview-padding: 30px 30px 0 30px;
+@box-preview-padding: 30px 40px 0 40px;
 @box-preview-padding-small: 15px 20px 0 20px;
-
-@box-preview-coupone-code-button-width: 92px;
 
 .box-preview {
     display: flex;
@@ -13,24 +11,38 @@
 
     background-color: @box-preview-bg;
 
+    @media @query-md {
+        width: @box-preview-width + @box-preview-gap;
+    }
+
+    @media @query-vl {
+        padding-left: @box-preview-gap;
+    }
+
+    &__title {
+        line-height: 20px;
+        margin-bottom: 15px;
+
+        color: @color-brown-light;
+        font-size: 15px;
+        font-family: @font-alt;
+        font-weight: 700;
+        text-transform: uppercase;
+    }
+
     &__row {
         padding: @box-preview-padding-small;
 
         background-color: @color-f;
-        border-radius: @radius;
-
-        @media @query-md {
-            border: 3px solid @color-border;
-        }
+        border: 3px solid @color-gray;
 
         @media @query-vl {
             padding: @box-preview-padding;
         }
 
         &--dark {
+            background-color: @color-gray;
             padding-bottom: 20px;
-
-            background-color: @color-box;
         }
 
         &--no-bottom {
@@ -38,30 +50,14 @@
         }
 
         &--thin-top-border {
-            padding-top: 14px;
-
-            border-top: 1px solid @color-border;
+            border-top: 2px solid @color-gray;
         }
-
-        &--without-radius {
-            border-radius: 0;
-        }
-
-        &--without-radius-bottom {
-            border-radius: @radius @radius 0 0;
-        }
-
-        &--without-radius-top {
-            border-radius: 0 0 @radius @radius;
-        }
-    }
-
-    &__back {
-        margin-bottom: 2px;
     }
 
     &__coupone {
         &__title {
+            margin-bottom: 13px;
+
             color: @color-base;
 
             &__label {
@@ -70,37 +66,32 @@
             }
         }
 
-        &__text {
-            display: block;
-            width: 100%;
-            margin-top: 10px;
-        }
+        &__input {
+            display: none;
 
-        &__code {
-            display: flex;
-            flex-direction: row;
+            &.active {
+                display: block;
+                position: relative;
+            }
 
-            &__input {
-                width: calc(~"100% - @{box-preview-coupone-code-button-width}");
-                
-                border-right: 0;
-                border-radius: @radius-small 0 0 @radius-small;
+            .input {
+                width: 100%;
             }
 
             &__button {
-                width: @box-preview-coupone-code-button-width;
-
-                border-radius: 0 @radius-small @radius-small 0;
+                position: absolute;
+                top: 13px;
+                right: 15px;
             }
         }
     }
 
     &__conditions {
         text-align: center;
-        line-height: 24px;
+        line-height: 22px;
         margin-bottom: 20px;
 
-        color: @color-base;
+        color: @color-brown-light;
         font-size: 14px;
         font-family: @font-alt;
 
@@ -111,22 +102,16 @@
     }
 
     &__button {
-        margin-bottom: 24px;
-        padding: 5px 10px;
+        margin-bottom: 30px;
+        padding: 0 10px;
 
         text-decoration: uppercase;
-        text-transform: uppercase;
-        font-size: 20px;
+        font-size: 18px;
 
         &__icon {
-            display: none;
-
-            @media @query-sm {
-                display: inline-block;
-                position: relative;
-                top: 2px;
-                right: 5px;
-            }
+            position: relative;
+            top: 2px;
+            right: 5px;
         }
     }
 }
