--- a/src/Resources/styles/front/common/components/box/special-offer.less
+++ b/src/Resources/styles/front/common/components/box/special-offer.less
@@ -80,7 +80,7 @@
         display: flex;
         flex-direction: column;
         width: 100%;
-        padding: 48px 30px 0px 30px;
+        padding: 48px 30px 0 30px;
 
         background-color: @box-special-offer-grayscale-bg;
 
