--- a/src/Resources/styles/front/common/components/list/benefits.less
+++ b/src/Resources/styles/front/common/components/list/benefits.less
@@ -1,6 +1,6 @@
 @list-benefits-count: 3;
-@list-benefits-gap: 5px 0 20px 0;
-@list-benefits-icon-size: 30px;
+@list-benefits-gap: 27px 0 50px 0;
+@list-benefits-icon-size: 40px;
 @list-benefits-icon-size-small: 34px;
 @list-benefits-width-mobile: 280px;
 
@@ -46,28 +46,24 @@
         width: 100%;
         margin-bottom: 10px;
 
-        &:last-child {
-            margin-bottom: 0;
-        }
-
-        @media @query-lg {
+        @media @query-vl {
             width: calc(~"@{calc-base}/@{list-benefits-count}");
             margin-bottom: 0;
 
-            &:nth-child(1){
-                padding-left: 35px;
+            &:nth-child(1) {
+                padding-left: 16px;
             }
 
-            &:nth-child(2){
-                padding-left: 21px;
+            &:nth-child(2) {
+                padding-left: 50px;
 
                 .list-benefits--small & {
                     padding-left: 45px;
                 }
             }
 
-            &:nth-child(3){
-                padding-left: 98px;
+            &:nth-child(3) {
+                padding-left: 78px;
 
                 .list-benefits--small & {
                     padding-left: 55px;
@@ -89,7 +85,7 @@
             }
 
             .svg {
-                color: @color-gray;
+                color: @color-brown;
                 font-size: @list-benefits-icon-size;
 
                 .list-benefits--small & {
@@ -102,20 +98,14 @@
             width: calc(~"@{calc-base} - @{list-benefits-icon-size}");
             padding-left: 12px;
 
-            color: @color-base;
-            font-size: @font-size-small;
+            color: @color-brown;
+            font-size: 15px;
+            font-weight: bold;
+            text-transform: uppercase;
 
             .list-benefits--small & {
                 width: calc(~"@{calc-base} - @{list-benefits-icon-size-small}");
                 font-size: @font-size-small
-            }
-
-            &__link {
-                font-weight: 700;
-                
-                &:hover {
-                    text-decoration: underline;
-                }
             }
         }
     }
