--- a/src/Resources/styles/front/common/components/list/products.less
+++ b/src/Resources/styles/front/common/components/list/products.less
@@ -1,11 +1,12 @@
 @list-products-item-count: 4;
-@list-products-item-padding: 20px;
-@list-products-item-image-size: 220px;
-@list-products-item-image-bottom-gap: 30px;
-@list-products-item-title-line-height: @font-size-small+4px;
+@list-products-item-padding: 15px;
+@list-products-item-image-size: 260px;
+@list-products-item-image-bottom-gap: 20px;
+@list-products-item-image-top-gap: 20px;
+@list-products-item-title-line-height: 24px;
 @list-products-item-title-rows: 2;
-@list-products-item-font-size: 15px;
-@list-products-item-line-height: 24px;
+@list-products-item-gap: 17px/2;
+@list-products-item-font-size: 18px;
 @list-products-item-stores-height: 18px;
 @list-products-item-info-gap: 15px;
 @list-products-item-border-color: #d3d2d2;
@@ -25,7 +26,7 @@
     display: flex;
     flex-wrap: wrap;
     align-items: stretch;
-    margin-bottom: -10px;
+    margin: 0 -@list-products-item-gap -10px -@list-products-item-gap;
 
     &__in {
         position: relative;
@@ -34,24 +35,42 @@
 
     &__item {
         position: relative;
-        width: calc(~"@{calc-base}/@{list-products-item-count-sm}");
-        margin-bottom: 50px;
+        width: calc(~"@{calc-base}/@{list-products-item-count-sm} - @{list-products-item-gap}*2");
+        padding: 0 0 10px 0;
+        margin: 0 @list-products-item-gap 60px @list-products-item-gap;
         z-index: @z-index-normal;
 
         color: @color-brown;
         background-color: @color-f;
-        border-bottom: 1px solid @color-border;
 
         @media @query-md {
-            width: calc(~"@{calc-base}/@{list-products-item-count-md}");
+            width: calc(~"@{calc-base}/@{list-products-item-count-md} - @{list-products-item-gap}*2");
         }
 
         @media @query-lg {
-            width: calc(~"@{calc-base}/@{list-products-item-count-lg}");
+            width: calc(~"@{calc-base}/@{list-products-item-count-lg} - @{list-products-item-gap}*2");
         }
 
         @media @query-xl {
-            width: calc(~"@{calc-base}/@{list-products-item-count-xl}");
+            width: calc(~"@{calc-base}/@{list-products-item-count-xl} - @{list-products-item-gap}*2");
+
+            &--doubled {
+                width: calc(~"(@{calc-base}/@{list-products-item-count-xl} - @{list-products-item-gap}*2)*2");
+            }
+        }
+
+        &:after {
+            content: ' ';
+            position: absolute;
+            bottom: 0;
+            height: 1px;
+            background-color: @list-products-item-border-color;
+            margin-left: 10px;
+            width: calc(~"@{calc-base} - 20px");
+
+            .list-products__item:hover & {
+                display: none;
+            }
         }
 
         &:hover {
@@ -72,7 +91,7 @@
 
         &__in {
             position: relative;
-            padding: @list-products-item-padding;
+            padding: 0 @list-products-item-padding;
         }
 
         &__block {
@@ -88,20 +107,21 @@
             align-self: center;
             position: relative;
             width: @list-products-item-image-size/2;
-            height: @list-products-item-image-size/2;
-            margin-bottom: 10px;
+            height: @list-products-item-image-size/2 + @list-products-item-image-bottom-gap;
+            margin-top: @list-products-item-image-top-gap;
             z-index: @z-index-under;
 
             @media @query-md {
                 width: @list-products-item-image-size;
-                height: @list-products-item-image-size;
-                margin-bottom: @list-products-item-image-bottom-gap;
+                height: @list-products-item-image-size + @list-products-item-image-bottom-gap;
             }
 
             img {
                 .center-image();
 
                 @media @query-md {
+                    margin-top: 0;
+
                     max-width: @list-products-item-image-size;
                     max-height: @list-products-item-image-size;
                 }
@@ -114,14 +134,12 @@
 
             &__title {
                 display: block;
-                height: 2 * @list-products-item-line-height;
-                line-height: @list-products-item-line-height;
+                height: @list-products-item-title-rows*@list-products-item-title-line-height;
+                line-height: @list-products-item-title-line-height;
                 margin-bottom: 0;
                 overflow: hidden;
 
                 font-size: @list-products-item-font-size;
-                font-weight: 400;
-                color: @color-gray-dark;
             }
 
             &__availability {
@@ -167,7 +185,7 @@
 
                     &__main {
                         display: block;
-                        padding: 2px 0;
+                        padding: 5px 0;
 
                         font-size: 16px;
                         font-weight: 700;
@@ -187,8 +205,8 @@
                         padding-left: 5px;
 
                         color: @color-price-discount;
-                        font-size: 16px;
-                        font-weight: 700;
+                        font-size: 13px;
+                        font-weight: 400;
                     }
                 }
             }
@@ -196,12 +214,11 @@
 
         &__variants {
             position: relative;
-            display: flex;
+            display: none;
             flex-direction: row;
             justify-content: center;
-            margin: 10.5px -(@list-products-item-padding + @list-products-item-info-gap) -10.5px -(@list-products-item-padding + @list-products-item-info-gap);
-            height: 0;
-            overflow: hidden;
+            margin: 10px -(@list-products-item-padding + @list-products-item-info-gap) 0 -(@list-products-item-padding + @list-products-item-info-gap);
+            height: @list-products-item-variants-height;
 
             &__slider {
                 width: 100%;
@@ -225,15 +242,15 @@
                 line-height: @list-products-item-variants-height;
 
                 cursor: pointer;
-                color: @color-gray-dark;
+                color: @color-orange;
                 font-size: @list-products-item-variants-arrow-size;
 
                 &:hover {
-                    color: @color-primary;
+                    color: darken(@color-orange, 10%);
                 }
 
                 &.slick-disabled {
-                    color: @color-gray-dark;
+                    color: @color-brown;
                     opacity: 0.2;
                 }
 
@@ -250,7 +267,7 @@
 
             .list-products__item--with-variants:hover & {
                 @media @query-lg {
-                    height: @list-products-item-variants-height;
+                    display: flex;
                 }
             }
 
@@ -263,7 +280,6 @@
 
                 font-size: 0;
                 border: 1px solid @color-gray;
-                border-radius: @radius-small;
 
                 img {
                     .center-image();
