--- a/src/Resources/styles/front/common/components/list/variants.less
+++ b/src/Resources/styles/front/common/components/list/variants.less
@@ -125,7 +125,7 @@
             line-height: @list-variants-item-size;
 
             font-size: 20px;
-            text-shadow: 0px 0px 2px @color-0;
+            text-shadow: 0 0 2px @color-0;
         }
 
         &.active {
