--- a/src/Resources/styles/front/common/layout/header/menu-iconic.less
+++ b/src/Resources/styles/front/common/layout/header/menu-iconic.less
@@ -1,35 +1,40 @@
 .menu-iconic {
-        .reset-ul();
-        display: block;
 
-        font-size: 0;
+    .reset-ul();
+    display: block;
 
-        &__item {
-            position: relative;
-            display: inline-block;
-            vertical-align: middle;
-            margin-bottom: 20px;
+    font-size: 0;
 
-            font-size: @font-size;
+    &__item {
+        position: relative;
+        display: inline-block;
+        vertical-align: middle;
+        margin-bottom: 20px;
 
-            &__link {
-                display: block;
-                text-align: left;
+        font-size: @font-size;
 
-                color: @color-base;
-                text-decoration: none;
+        &__link {
+            display: block;
+            text-align: left;
 
-                &:hover {
-                    span {
-                        font-weight: 700;
-                    }
+            color: @color-base;
+            text-decoration: none;
+
+            &:hover {
+                span {
+                    font-weight: 700;
                 }
             }
 
-            &:hover {
-                .menu-iconic__sub {
-                    display: block;
-                }
+            &--last {
+                margin-bottom: 20px;
+            }
+        }
+
+        &:hover {
+            .menu-iconic__sub {
+                display: block;
             }
         }
     }
+}
