--- a/templates/Grunt/gruntfile.js.twig
+++ b/templates/Grunt/gruntfile.js.twig
@@ -216,6 +216,15 @@ module.exports = function(grunt) {
             }
         },
 
+       stylelint: {
+          frontend: [
+                  '{{ customResourcesDirectory|raw }}/styles/**/*.less'
+              ],
+              admin: [
+                  '{{ frameworkResourcesDirectory|raw }}/styles/admin/**/*.less'
+              ]
+       },
+
         watch: {
             admin: {
                 files: [
@@ -271,7 +280,7 @@ module.exports = function(grunt) {
                     ],
                     tasks: {%- if domain.id == 1 -%}[{% for domain in domains %}'frontendLess{{ domain.id }}'{% if not loop.last %},{% endif %}{% endfor %}]
                     {% else -%}
-                        ['frontendLess{{ domain.id }}']
+                        ['frontendLess{{ domain.id }}', 'stylelint']
                     {% endif -%}
                 },
                 helpers{{ domain.id }}: {
@@ -305,13 +314,14 @@ module.exports = function(grunt) {
         }
     });
     grunt.loadNpmTasks('grunt-spritesmith');
+    grunt.loadNpmTasks('grunt-stylelint');
 
-    grunt.registerTask('default', ["sprite:admin", "sprite:frontend", "webfont", "less", "postcss"]);
+    grunt.registerTask('default', ["sprite:admin", "sprite:frontend", "webfont", "less", "postcss", "stylelint:frontend"]);
 
     {% for domain in domains -%}
         grunt.registerTask('frontend{{ domain.id }}', ['webfont:frontend', 'sprite:frontend', 'less:frontend{{ domain.id }}', 'less:print{{ domain.id }}', 'less:wysiwyg{{ domain.id }}'], 'postcss');
     {% endfor -%}
-    grunt.registerTask('admin', ['sprite:admin', 'webfont:admin', 'less:admin' ]);
+    grunt.registerTask('admin', ['sprite:admin', 'webfont:admin', 'less:admin', 'stylelint:admin' ]);
 
     {% for domain in domains -%}
         grunt.registerTask('frontendLess{{ domain.id }}', ['less:frontend{{ domain.id }}', 'less:print{{ domain.id }}', 'less:wysiwyg{{ domain.id }}']);
