--- a/src/Resources/styles/front/common/components/box/chooser.less
+++ b/src/Resources/styles/front/common/components/box/chooser.less
@@ -138,7 +138,51 @@
         padding-left: 20px;
     }
 
-    &__toggle-additional {
+    &__more {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        margin-top: 15px;
+        padding: 10px 15px;
+
+        background-color: @color-light;
         cursor: pointer;
+        border-radius: @radius;
+        transition: @transition;
+
+        &:hover {
+            background-color: darken(@color-light, 5%);
+        }
+
+        &__text {
+            margin: 0 10px 0 0;
+
+            &__show {
+                display: block;
+            }
+
+            &__hide {
+                display: none;
+            }
+        }
+
+        .svg {
+            transition: @transition;
+            font-size: 8px;
+        }
+
+        &.active {
+            .box-chooser__more__text__show {
+                display: none;
+            }
+
+            .box-chooser__more__text__hide {
+                display: block;
+            }
+
+            .svg {
+                transform: rotate(180deg);
+            }
+        }
     }
 }
