design: edit font size in input

--- a/src/Resources/styles/front/common/components/form/input-spinbox.less
+++ b/src/Resources/styles/front/common/components/form/input-spinbox.less
@@ -51,6 +51,8 @@
         .form-input-spinbox--small & {
             height: @form-input-spinbox-height-small;
             line-height: @form-input-spinbox-height-small;
+
+            font-size: @font-size;
         }
 
         &:focus {
