design: fix bug with small images of product

--- a/src/Shopsys/ShopBundle/Resources/styles/front/common/components/list/article-product.less
+++ b/src/Shopsys/ShopBundle/Resources/styles/front/common/components/list/article-product.less
@@ -1,6 +1,5 @@
 @list-article-product-item-padding: 20px;
 @list-article-product-item-image-size: 75px;
-@list-article-product-item-image-bottom-gap: 20px;
 @list-article-product-item-title-rows: 2;
 
 .list-article-product {
@@ -24,8 +23,7 @@
             display: flex;
             position: relative;
             align-self: center;
-            margin-bottom: @list-article-product-item-image-bottom-gap;
-            max-height: @list-article-product-item-image-size;
+            height: @list-article-product-item-image-size;
             width: @list-article-product-item-image-size;
             padding-right: 10px;
 
