--- a/src/Shopsys/ShopBundle/Resources/views/Front/Content/Blog/Article/detail.html.twig
+++ b/src/Shopsys/ShopBundle/Resources/views/Front/Content/Blog/Article/detail.html.twig
@@ -44,12 +44,14 @@
                     <div class="box-blog__section">
                         {{ render(controller('ShopsysShopBundle:Front/BlogCategory:list', {blogArticle: blogArticle})) }}
                     </div>
-                    <div class="box-blog__section">
-                        <div class="box-blog__section__title">
-                            {{ 'V článku píšeme o těchto produktech'|trans }}
+                    {% if blogArticle.hasProducts() %}
+                        <div class="box-blog__section">
+                            <div class="box-blog__section__title">
+                                {{ 'V článku píšeme o těchto produktech'|trans }}
+                            </div>
+                            {{ render(controller('ShopsysShopBundle:Front/BlogArticle:products', {blogArticle: blogArticle})) }}
                         </div>
-                        {{ render(controller('ShopsysShopBundle:Front/BlogArticle:products', {blogArticle: blogArticle})) }}
-                    </div>
+                    {% endif %}
                 </div>
             </div>
         </div>
