Initial change of German domain to English. Added English translation of all texts in messages.

--- a/templates/Admin/Content/PromoProduct/detail.html.twig
+++ b/templates/Admin/Content/PromoProduct/detail.html.twig
@@ -1,7 +1,7 @@
 {% extends '@ShopsysFramework/Admin/Layout/layoutWithPanel.html.twig' %}
 
 {% block title %}- {{ 'Detail promo produktu'|trans }}{% endblock %}
-{% block h1 %}{{ 'Detail promo produkt'|trans }}{% endblock %}
+{% block h1 %}{{ 'Detail promo produktu'|trans }}{% endblock %}
 
 {% block main_content %}
 
