--- a/templates/Front/Content/Default/index.html.twig
+++ b/templates/Front/Content/Default/index.html.twig
@@ -32,7 +32,7 @@
             <div class="web__container">
                 <div id="top-products" class="box-top-products">
                     <h1 class="box-top-products__title">
-                        {{ 'Vybíráme to nejlepší na říjen'|trans }}
+                        {{ 'Vybíráme to nejlepší'|trans }}
                     </h1>
                     <div class="box-top-products__in">
                         {{ productList.horizontalList(topProducts, "list-top-products", 'h3', 'top-products') }}
