--- a/templates/Front/Content/Customer/edit.html.twig
+++ b/templates/Front/Content/Customer/edit.html.twig
@@ -110,7 +110,7 @@
                             {{ form_row(form.deliveryAddressData.city, { label: 'City'|trans}) }}
                             {{ form_row(form.deliveryAddressData.postcode, { label: 'Postcode'|trans}) }}
 
-                            {% if isGermanyDomain() is same as (true) %}
+                            {% if isEnglishDomain() is same as (true) %}
                                 {{ form_row(form.deliveryAddressData.country, { label: 'Country'|trans}) }}
                             {% else %}
                                 <div class="display-none">
