--- a/templates/Front/Content/Order/step3.html.twig
+++ b/templates/Front/Content/Order/step3.html.twig
@@ -26,7 +26,7 @@
                                 {{ form_row(form.firstName, { label: 'First name'|trans }) }}
                                 {{ form_row(form.lastName, { label: 'Last name'|trans }) }}
                                 {{ form_row(form.telephone, { label: 'Telephone'|trans }) }}
-                                {% if isGermanyDomain() is same as (true) or isSlovakDomain() is same as (true) %}
+                                {% if isEnglishDomain() is same as (true) or isSlovakDomain() is same as (true) %}
                                     <span class="form-line__info">{{ 'Telefonní číslo musí začínat +XXX'|trans }}</span>
                                 {% endif %}
 
@@ -92,14 +92,14 @@
                             {% else %}
                                 <div id="js-delivery-address-fields" class="margin-top-20">
                                     {{ form_row(form.deliveryCompanyName, { label: 'Company'|trans }) }}
-                                    {% if isGermanyDomain() is same as (true) %}
+                                    {% if isEnglishDomain() is same as (true) %}
                                         <span class="info">{{ 'Telefonní číslo musí začínat +XXX'|trans }}</span>
                                     {% endif %}
                                     {{ form_row(form.deliveryStreet, { label: 'Street'|trans }) }}
                                     {{ form_row(form.deliveryCity, { label: 'City'|trans }) }}
                                     {{ form_row(form.deliveryPostcode, { label: 'Postcode'|trans }) }}
 
-                                    {% if isGermanyDomain() is same as (true) %}
+                                    {% if isEnglishDomain() is same as (true) %}
                                         {{ form_row(form.deliveryCountry, { label: 'Country'|trans }) }}
                                         <a href="{{ url('front_order_index') }}">{{ 'Změnit'|trans }}</a>
                                     {% else %}
