--- a/src/Resources/styles/front/common/components/list/basket-additionals.less
+++ b/src/Resources/styles/front/common/components/list/basket-additionals.less
@@ -95,8 +95,7 @@
             align-self: center;
             margin-bottom: @list-basket-additionals-item-image-bottom-gap;
             height: @list-basket-additionals-item-image-size;
-            width: @list-basket-additionals-item-image-size;
-            max-width: 100%;
+            width: 100%;
 
             img {
                 .center-image();
