--- a/src/Resources/styles/front/common/components/list/last-visited.less
+++ b/src/Resources/styles/front/common/components/list/last-visited.less
@@ -105,11 +105,10 @@
             align-self: center;
             margin-bottom: @list-last-visited-item-image-bottom-gap;
             height: @list-last-visited-item-image-size;
-            width: @list-last-visited-item-image-size;
+            width: 100%;
 
             img {
                 .center-image();
-                max-width: @list-last-visited-item-image-size;
                 max-height: @list-last-visited-item-image-size;
             }
         }
