--- a/src/Resources/styles/front/common/components/list/products.less
+++ b/src/Resources/styles/front/common/components/list/products.less
@@ -1,6 +1,7 @@
 @list-products-item-count: 4;
 @list-products-item-padding: 20px;
-@list-products-item-image-size: 220px;
+@list-products-item-image-height: 220px;
+@list-products-item-image-height-small: 110px;
 @list-products-item-image-bottom-gap: 30px;
 @list-products-item-title-line-height: @font-size-small+4px;
 @list-products-item-title-rows: 2;
@@ -87,14 +88,13 @@
             display: flex;
             align-self: center;
             position: relative;
-            width: @list-products-item-image-size/2;
-            height: @list-products-item-image-size/2;
+            width: 100%;
+            height: @list-products-item-image-height-small;
             margin-bottom: 10px;
             z-index: @z-index-under;
 
             @media @query-md {
-                width: @list-products-item-image-size;
-                height: @list-products-item-image-size;
+                height: @list-products-item-image-height;
                 margin-bottom: @list-products-item-image-bottom-gap;
             }
 
@@ -102,8 +102,7 @@
                 .center-image();
 
                 @media @query-md {
-                    max-width: @list-products-item-image-size;
-                    max-height: @list-products-item-image-size;
+                    max-height: @list-products-item-image-height;
                 }
             }
         }
