--- a/templates/Front/Content/Product/productListMacro.html.twig
+++ b/templates/Front/Content/Product/productListMacro.html.twig
@@ -122,14 +122,14 @@
                     <div class="{{ listCssClass }}__item__in">
                         <a href="{{ productView.action.detailUrl }}" class="{{ listCssClass }}__item__block">
                             <div class="{{ listCssClass }}__item__image dont-print">
-                                {{ image(productView.image, { size: 'list', alt: productView.name }) }}
+                                {{ image(productView.image, { size: 'list', alt: productView.name, lazy: true }) }}
+                                {% set productFlagIds = productView.flagIds %}
+                                {% set freeTransportAndPaymentFlagId = getFreeTransportAndPaymentFlagIdIfShouldBeDisplayed(productView) %}
+                                {% if freeTransportAndPaymentFlagId is not null %}
+                                    {% set productFlagIds = { 0: freeTransportAndPaymentFlagId } %}
+                                {% endif %}
+                                {{ renderFlagsByIds(productFlagIds, 'in-flag--in-list') }}
                             </div>
-                            {% set productFlagIds = productView.flagIds %}
-                            {% set freeTransportAndPaymentFlagId = getFreeTransportAndPaymentFlagIdIfShouldBeDisplayed(productView) %}
-                            {% if freeTransportAndPaymentFlagId is not null %}
-                                {% set productFlagIds = { 0: freeTransportAndPaymentFlagId } %}
-                            {% endif %}
-                            {{ renderFlagsByIds(productFlagIds, 'in-flag--in-list') }}
 
                             <div class="{{ listCssClass }}__item__info">
 
